lang.java.statics.test/tests/positive/interfaces/implementsempty.yes.javtest
STATIX ok
JAVAC  ok

[B]
public class B implements I {}

[I]
public interface I {}

