lang.java.statics.test/tests/negative/interfaces/class-implements-class.no.javtest
STATIX fail java\.interfaces\.implement-interface
JAVAC  fail interface expected here

[B]
class B {}

[A]
class A implements B {}
